# audiostreamer

./: .gitignore  .gitmodules  .taurignore  0001-unix-socket.patch  Cargo.toml  LICENSE  README.md  build.rs  config.toml  debug_recs.json  musickit.js  package.json  pnpm-lock.yaml  sharing.md  skills-lock.json  tauri.conf.json  wrapper_build_fix.patch
.github/workflows/: check.yml
capabilities/: default.json
patches/: 0001-unix-socket.patch  cef-rs.patch  wrapper_build_fix.patch
src/: am_wrapper.rs  app.rs  cli.rs  client.rs  config.rs  discord.rs  disk_cache.rs  error.rs  gpac.rs  gpac_ffi.rs  lib.rs  main.rs  media.rs  tauri_app.rs
src/audio/: decoder.rs  mod.rs  sink.rs  source.rs  stream.rs
src/sinks/: mod.rs  noop.rs  playback.rs
src/sources/: mod.rs  song.rs  utils.rs
stitch/18335992640719645915/a69879212569468ea4f019c637d1eabe/: screen.html
stitch/18335992640719645915/e90d0a26502a4980bcb2fb9098d4fe62/: screen.html
ui/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
ui/public/stitch/18335992640719645915/26823acac4fe4348873032722fbc3fa8/: code.html
ui/public/stitch/18335992640719645915/2b7794500ecc4f54a7e27ef0ab93b5da/: code.html
ui/public/stitch/18335992640719645915/45451b55a5264683b55fa8bd9e204dbd/: code.html
ui/public/stitch/18335992640719645915/4714694a3cfe44ad81be26af0b47af97/: code.html
ui/public/stitch/18335992640719645915/5dc64b462c3b4288a2ca5e3056f71ee8/: code.html
ui/public/stitch/18335992640719645915/7f2866f20577458ebbeca85f25a4f5be/: code.html
ui/public/stitch/18335992640719645915/81f2d2048fe84f71bd766ce77a175590/: code.html
ui/public/stitch/18335992640719645915/828c8500960243aa901a1d10b0bd3068/: code.html
ui/public/stitch/18335992640719645915/907cb95aa10146deb1a9a3c456397342/: code.html
ui/public/stitch/18335992640719645915/975ead6684d446d7825e0aa5e817476a/: code.html
ui/public/stitch/18335992640719645915/aa1c0b2c36b342958c4ec58b97ee52bb/: code.html
ui/public/stitch/18335992640719645915/b9d9c252780c4d4592855b2af7c732da/: code.html
ui/public/stitch/18335992640719645915/cc1728e69d5e42ea9da553e8fe5431b1/: code.html
ui/public/stitch/18335992640719645915/cea0202149434b23aac658b4aa10470b/: code.html
ui/src/: App.svelte  app.css
ui/src/lib/: appleMusic.ts  library.svelte.ts  navigation.svelte.ts  playback.svelte.ts  playbackStore.ts  search.svelte.ts  stitch-screens.json
ui/src/lib/actions/: snapShelf.ts
ui/src/lib/components/: AlbumView.svelte  HomeFeed.svelte  LibraryView.svelte  LyricsPane.svelte  MainFeed.svelte  NowPlayingFullscreen.svelte  PlaybackBar.svelte  PlaylistView.svelte  RightPane.svelte  SearchHeader.svelte  SearchResults.svelte  Sidebar.svelte  TrackList.svelte  search_results_reference.html
ui/src/lib/lyrics/: ttml.ts
(+2 files in other folders)
